2020-04-30  Franz Holzinger <franz@ttproducts.de>
    * compatibility for TYPO3 9: replace deprecated methods

2019-12-20  Franz Holzinger <franz@ttproducts.de>
    * compatibility for TYPO3 9: transactor 0.8.0 now runs fully under TYPO3 9.5.
    * set compatibility = 0 to use the new API by default.
    * Deprecation 75371: replace GeneralUtility::array2xml_cs() by GeneralUtility::array2xml()

2019-11-05  Franz Holzinger <franz@ttproducts.de>
    * bugfix: paymentmethods.xml must be used in the old API for the payment methods, and not paymentmethods.xlf.
    * remove dependency from migration_core. Replace all t3lib_div calls by TYPO3\CMS\Core\Utility\GeneralUtility. Replace all t3lib_extMgm calls by TYPO3\CMS\Core\Utility\ExtensionManagementUtility. Replace t3lib_Singleton by \TYPO3\CMS\Core\SingletonInterface
    * use makeInstance instead of getUserObj

2019-08-27  Franz Holzinger <franz@ttproducts.de>
    * readd ext_autoload.php for TYPO3 6.2

2019-03-06  Franz Holzinger <franz@ttproducts.de>
    * new feature: Support for multple configuration by setup. Store the extension configuration with each transactor record.
    * apply to the requirements of PHP 7.2

2019-02-14  Franz Holzinger <franz@ttproducts.de>
    * modifications according to the Coding Guidelines

2018-12-06  Franz Holzinger <franz@ttproducts.de>
    * remove the file ext_tables.php

2018-09-11  Franz Holzinger <franz@ttproducts.de>
    * use TYPO3 and div2007 namespace classes everywhere
    * new method transactionFormGetScriptParameters for javascript based gateways
    * modification in composer.json

2018-07-03  Franz Holzinger <franz@ttproducts.de>
    * new feature: support for features. Address entry form is the first feature which is supported. This is supported by the Paypal Plus extension.
    * new feature: Show an error message if a requested payment extension has not been installed.